# flat-type

./: CMakeLists.txt  README.md  package.xml
cmake/: flat-typeConfig.cmake.in
include/flat-type/: flat.hpp
test/: flat_type_test.cpp
